--- a/custom-theme.css
+++ b/custom-theme.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*!
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap"); /*!
  * Bootstrap  v5.3.0 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -34,7 +34,7 @@
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
-  --bs-danger: lightcoral;
+  --bs-danger: #f08080;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 65, 105, 225;
@@ -120,8 +120,8 @@
   --bs-focus-ring-color: rgba(65, 105, 225, 0.25);
   --bs-form-valid-color: #198754;
   --bs-form-valid-border-color: #198754;
-  --bs-form-invalid-color: lightcoral;
-  --bs-form-invalid-border-color: lightcoral;
+  --bs-form-invalid-color: #f08080;
+  --bs-form-invalid-border-color: #f08080;
 }
 
 [data-bs-theme=dark] {
@@ -2866,7 +2866,7 @@ textarea.form-control-lg {
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: var(--bs-form-invalid-border-color);
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='lightcoral'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='lightcoral' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23f08080'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23f08080' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -2885,7 +2885,7 @@ textarea.form-control-lg {
   border-color: var(--bs-form-invalid-border-color);
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
-  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='lightcoral'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='lightcoral' stroke='none'/%3e%3c/svg%3e");
+  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23f08080'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23f08080' stroke='none'/%3e%3c/svg%3e");
   padding-right: 4.125rem;
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -3089,8 +3089,8 @@ textarea.form-control-lg {
 
 .btn-danger {
   --bs-btn-color: #000;
-  --bs-btn-bg: lightcoral;
-  --bs-btn-border-color: lightcoral;
+  --bs-btn-bg: #f08080;
+  --bs-btn-border-color: #f08080;
   --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #f29393;
   --bs-btn-hover-border-color: #f28d8d;
@@ -3100,8 +3100,8 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #f28d8d;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: lightcoral;
-  --bs-btn-disabled-border-color: lightcoral;
+  --bs-btn-disabled-bg: #f08080;
+  --bs-btn-disabled-border-color: #f08080;
 }
 
 .btn-light {
@@ -3224,19 +3224,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-danger {
-  --bs-btn-color: lightcoral;
-  --bs-btn-border-color: lightcoral;
+  --bs-btn-color: #f08080;
+  --bs-btn-border-color: #f08080;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: lightcoral;
-  --bs-btn-hover-border-color: lightcoral;
+  --bs-btn-hover-bg: #f08080;
+  --bs-btn-hover-border-color: #f08080;
   --bs-btn-focus-shadow-rgb: 240, 128, 128;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: lightcoral;
-  --bs-btn-active-border-color: lightcoral;
+  --bs-btn-active-bg: #f08080;
+  --bs-btn-active-border-color: #f08080;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: lightcoral;
+  --bs-btn-disabled-color: #f08080;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: lightcoral;
+  --bs-btn-disabled-border-color: #f08080;
   --bs-gradient: none;
 }
 
@@ -12031,4 +12031,8 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+:root {
+  --bs-body-font-family: "Poppins", sans-serif;
+  --bs-breadcrumb-margin-bottom: 0;
 }/*# sourceMappingURL=custom-theme.css.map */
