--- a/global.css
+++ b/global.css
@@ -1,7 +1,18 @@
 @import "node_modules/bootstrap/dist/css/bootstrap.css";
 @import "custom-theme.css";
+
+html,
 body {
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+}
+
+body {
+  background-color: rgb(254, 254, 254);
+}
+
+.work-panel {
+  margin-top: 1rem;
 }
 
 .panel {
