--- a/global.css
+++ b/global.css
@@ -11,6 +11,24 @@ body {
   background-color: rgb(254, 254, 254);
 }
 
+@media screen and (min-width: 768px) {
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f5f5f5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #a7bcf9;
+  }
+}
+
 .work-panel {
   margin-top: 1rem;
 }
