add sanitizing details layout

--- a/dashboard/customer.css
+++ b/dashboard/customer.css
@@ -31,6 +31,14 @@
   max-height: 190px;
 }
 
+.contact-card {
+  cursor: pointer;
+}
+
+.contact-card:hover {
+  background-color: #d9e1f9;
+}
+
 .contact-container .card .badge {
   margin-bottom: 1rem;
 }
@@ -51,5 +59,18 @@
 }
 
 .comments-container .card:hover {
+  background-color: #d9e1f9;
+}
+
+.dustbins-container {
+  max-height: 200px;
+}
+
+.dustbins-container .card {
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
+
+.dustbins-container .card:hover {
   background-color: #d9e1f9;
 }
