--- a/global.css
+++ b/global.css
@@ -116,3 +116,37 @@ body {
   border: none;
   background: none;
 }
+
+/* PULSATING DOT */
+.blob {
+  background: #198754;
+  border-radius: 50%;
+  height: 13px;
+  width: 13px;
+
+  box-shadow: 0 0 0 0 rgba(25, 135, 84, 1);
+  transform: scale(1);
+  animation: pulse 2s infinite;
+}
+
+.blob.inactive {
+  background-color: red;
+  animation: none;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(25, 135, 84, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(25, 135, 84, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(25, 135, 84, 0);
+  }
+}
