--- a/dashboard/customer.css
+++ b/dashboard/customer.css
@@ -43,7 +43,8 @@
   margin-bottom: 1rem;
 }
 
-.deactivate-customer-btn {
+.deactivate-customer-btn,
+.activate-customer-btn {
   position: absolute;
   bottom: 0.2rem;
   right: 1rem;
