add login page functionality

--- a/login/style.css
+++ b/login/style.css
@@ -8,26 +8,6 @@ main.panel {
   -moz-box-shadow: 0px 0px 7px 1px rgba(112, 112, 112, 0.58);
 }
 
-form {
-  width: 100%;
-}
-
-form p {
-  margin-top: -0.5rem;
-  margin-bottom: 3rem;
-}
-
-form button[type="submit"] {
-  position: absolute;
-  bottom: 2rem;
-  left: 2rem;
-  width: calc(100% - 4rem);
-}
-
-form a {
-  float: right;
-}
-
 @media (max-width: 576px) {
   main.panel {
     position: absolute;
@@ -36,11 +16,8 @@ form a {
     width: 100%;
   }
 
-  svg {
+  #waves {
     transform: scale(1, -1);
     top: 0;
   }
-}
-.custom-form-control {
-  margin-bottom: 1rem;
 }
